netpolicy/netpol-db-deny-all-ingress.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: db-deny-all
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress
