netpolicy/netpol-web-deny-v1-egress.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-deny-v1
spec:
  podSelector:
    matchLabels:
      app: web
      version: v1
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.96.0.10/32
    - ipBlock:
        cidr: 169.254.20.10/32
  - to:
    - namespaceSelector: {}
